Version 1.2.1 (2022-04-27)
- Fix callback alive check

Version 1.2.0 (2022-04-26)
- Cleanup build

Version 1.1.5 (2022-04-25)
- Reorg light attributes
- Add on_time to light and switch

Version 1.1.4 (2022-04-21)
- Use min as default if default is unset for parameter_data

Version 1.1.3 (2022-04-20)
- Add CeColorDimmer
- Fix interface_event

Version 1.1.2 (2022-04-12)
- Add extra_params to _post_script
- Add set_system_variable with string value
- Disallow html tags in string system variable

Version 1.1.1 (2022-04-11)
- Read version and serial in get_client

Version 1.1.0 (2022-04-09)
- Add BATTERY_STATE to DEFAULT_ENTITIES
- Migrate device_info to dataclass
- Add rega script (provided by @baxxy13) to get serial from CCU
- Add method to clean up cache dirs

Version 1.0.6 (2022-04-06)
- Revert to XmlRPC getValue and getParamset for CCU

Version 1.0.5 (2022-04-05)
- Limit hub_state to ccu only

Version 1.0.4 (2022-03-30)
- Use max version of interfaces for backend version
- Remove device as parameter from parameter_availability
- Add XmlRPC.listDevice to Client
- Add start_direct for starts without waiting for events (only for temporary usage)

Version 1.0.3 (2022-03-30)
- Revert to XmlRPC getVersion for CCU

Version 1.0.2 (2022-03-29)
- Revert to XmlRPC getParamsetDescription for CCU

Version 1.0.1 (2022-03-29)
- Add central_id for uniqueness of heating groups, sysvars and hub

Version 1.0.0 (2022-03-28)
- Simplify json usage
- Move json methods to json client
- Make json client independent from central config
- Add get_serial to validate
- Use serial for sysvar unique_ids
- Rename domain for test and example from hahm to homematicip_local

Version 0.38.5 (2022-03-22)
- Use interface_id for interface events
- Add support for color temp dimmer

Version 0.38.4 (2022-03-21)
- Fix interface name for BidCos-Wired

Version 0.38.3 (2022-03-20)
- Add check for available API method to identify BidCos Wired
- Cleanup backend identification

Version 0.38.2 (2022-03-20)