@@ -10,7 +10,7 @@ from hahomematic.const import (
     DEFAULT_TIMEOUT,
 )
 
-CALLBACK_CHECKER_INTERVAL = DEFAULT_CONNECTION_CHECKER_INTERVAL * 10
+CALLBACK_CHECKER_INTERVAL = DEFAULT_CONNECTION_CHECKER_INTERVAL * 6
 CONNECTION_CHECKER_INTERVAL = DEFAULT_CONNECTION_CHECKER_INTERVAL
 RECONNECT_WAIT = DEFAULT_RECONNECT_WAIT
 INIT_TIMEOUT = DEFAULT_INIT_TIMEOUT
