@@ -200,7 +200,7 @@ DEFAULT_INIT_TIMEOUT = 90
 DEFAULT_TLS = False
 DEFAULT_VERIFY_TLS = False
 DEFAULT_CONNECTION_CHECKER_INTERVAL = 30
-DEFAULT_RECONNECT_WAIT = 120
+DEFAULT_RECONNECT_WAIT = 90
 
 HM_ENTITY_UNIT_REPLACE: dict[str, str] = {
     '"': "",
